--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 checkinsFull.txt filter=lfs diff=lfs merge=lfs -text
+Yelp/yelp_dataset_challenge_round9 filter=lfs diff=lfs merge=lfs -text
+Yelp/yelp_academic_dataset_business.json filter=lfs diff=lfs merge=lfs -text
+Yelp/yelp_academic_dataset_review.json filter=lfs diff=lfs merge=lfs -text
