--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ Yelp/yelp_dataset_challenge_round9 filter=lfs diff=lfs merge=lfs -text
 Yelp/yelp_academic_dataset_business.json filter=lfs diff=lfs merge=lfs -text
 Yelp/yelp_academic_dataset_review.json filter=lfs diff=lfs merge=lfs -text
 Yelp/review.json filter=lfs diff=lfs merge=lfs -text
+Yelp/train.json filter=lfs diff=lfs merge=lfs -text
