--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,5 @@ Yelp/yelp_academic_dataset_business.json filter=lfs diff=lfs merge=lfs -text
 Yelp/yelp_academic_dataset_review.json filter=lfs diff=lfs merge=lfs -text
 Yelp/review.json filter=lfs diff=lfs merge=lfs -text
 Yelp/train.json filter=lfs diff=lfs merge=lfs -text
+Yelp/validate.json filter=lfs diff=lfs merge=lfs -text
+Yelp/test.json filter=lfs diff=lfs merge=lfs -text
